--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
 
+    implementation 'software.amazon.awssdk:s3:2.22.12'
 
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.security:spring-security-test'
