feat : githubAction 일부 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,7 +43,7 @@ jobs:
       run : | 
         cd ./src/main/resources
         touch ./application.yml
-        echo "${{secrets.APPLICATION_PROPERTIES}}" > ./application.yml
+        echo "${{secrets.APPLICATION_PROPERTIES}}" > ./application.properties
       shell: bash
       
     - name: Grant Execute Permission For Gradlew
