--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -81,7 +81,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/imagename:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/imagename:${{ github.sha }}
+          build-args: |
+            JAR_FILE=${{ steps.build.outputs.jar-file }}
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
