--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,33 +42,10 @@ jobs:
 
       - name: Create application.properties
         run: |
-          mkdir ./src/main/resources
+          mkdir -p ./src/main/resources
           cd ./src/main/resources
-          touch ./application.properties
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > application.properties
         shell: bash
-
-      - name: Create NginX config
-        run: |
-          cat << EOF > nginx.conf
-          events {
-              worker_connections 1024;
-          }
-          http {
-              upstream spring-app {
-                  server spring-boot:8080;
-              }
-              server {
-                  listen 80;
-                  location / {
-                      proxy_pass http://spring-app;
-                      proxy_set_header Host \$host;
-                      proxy_set_header X-Real-IP \$remote_addr;
-                      proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                  }
-              }
-          }
-          EOF
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -81,9 +58,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/imagename:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/imagename:latest
           build-args: |
-            JAR_FILE=${{ steps.build.outputs.jar-file }}
+            JAR_FILE=build/libs/*.jar
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -102,7 +79,7 @@ jobs:
           port: 22
           envs: DOCKER_USERNAME,RDS_ENDPOINT,DB_NAME,DB_USERNAME,DB_PASSWORD,REDIS_HOST,REDIS_PORT
           script: |
-            # Create .env file
+            # Update .env file with latest values
             echo "DOCKER_USERNAME=${DOCKER_USERNAME}" > .env
             echo "RDS_ENDPOINT=${RDS_ENDPOINT}" >> .env
             echo "DB_NAME=${DB_NAME}" >> .env
@@ -110,75 +87,6 @@ jobs:
             echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
             echo "REDIS_HOST=${REDIS_HOST}" >> .env
             echo "REDIS_PORT=${REDIS_PORT}" >> .env
-            
-            # Create docker-compose.yml
-            cat << EOF > docker-compose.yml
-            version: '3'
-            services:
-              nginx:
-                image: nginx:alpine
-                ports:
-                  - "80:80"
-                volumes:
-                  - ./nginx.conf:/etc/nginx/nginx.conf:ro
-                depends_on:
-                  - spring-boot
-                networks:
-                  - app_network
-                restart: always
-            
-              spring-boot:
-                image: ${DOCKER_USERNAME}/imagename:latest
-                expose:
-                  - "8080"
-                environment:
-                  - SPRING_DATASOURCE_URL=jdbc:mysql://${RDS_ENDPOINT}/${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
-                  - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
-                  - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
-                  - SPRING_REDIS_HOST=${REDIS_HOST}
-                  - SPRING_REDIS_PORT=${REDIS_PORT}
-                depends_on:
-                  - redis
-                networks:
-                  - app_network
-                restart: always
-            
-              redis:
-                image: redis:alpine
-                volumes:
-                  - redis_data:/data
-                networks:
-                  - app_network
-                restart: always
-            
-            networks:
-              app_network:
-                driver: bridge
-            
-            volumes:
-              redis_data:
-            EOF
-            
-            # Copy NginX config
-            cat << EOF > nginx.conf
-            events {
-                worker_connections 1024;
-            }
-            http {
-                upstream spring-app {
-                    server spring-boot:8080;
-                }
-                server {
-                    listen 80;
-                    location / {
-                        proxy_pass http://spring-app;
-                        proxy_set_header Host \$host;
-                        proxy_set_header X-Real-IP \$remote_addr;
-                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                    }
-                }
-            }
-            EOF
             
             # Pull the latest images
             docker-compose pull
