--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v2
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
         with:
           path: |
             ~/.gradle/caches
@@ -47,14 +47,14 @@ jobs:
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > application.properties
         shell: bash
 
-      - name: Login to Docker
+      - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
@@ -77,8 +77,6 @@ jobs:
           port: 22
           envs: DOCKER_USERNAME,RDS_ENDPOINT,DB_NAME,DB_USERNAME,DB_PASSWORD,REDIS_HOST,REDIS_PORT
           script: |
-            
-
             # Update .env file with latest values
             echo "DOCKER_USERNAME=${DOCKER_USERNAME}" > .env
             echo "RDS_ENDPOINT=${RDS_ENDPOINT}" >> .env
@@ -91,39 +89,39 @@ jobs:
             # Create nginx.conf file
             cat << 'EOF' > nginx.conf
             events {
-              worker_connections 1024;
+            worker_connections 1024;
             }
-            http {
+            
+              http {
               upstream spring-app {
-                server spring-boot:8080;
-              }
-              server {
-                listen 80;
-                server_name localhost;
-                location / {
-                  proxy_pass http://spring-app;
-                  proxy_set_header Host $host;
-                  proxy_set_header X-Real-IP $remote_addr;
-                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                }
-              }
+              server spring-boot:8080;
             }
-            EOF
             
-            # Pull the latest images
-            docker-compose pull
+              server {
+              listen 80;
+              server_name localhost;
             
-            # Build and start the containers
-            docker-compose up -d --build
+              location / {
+              proxy_pass http://spring-app;
+              proxy_set_header Host \$host;
+              proxy_set_header X-Real-IP \$remote_addr;
+              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+            }
+            }
+            }
+              EOF
+            
+              # Pull the latest images
+              docker-compose pull
+            
+              # Build and start the containers
+              docker-compose up -d --build
+            
+              # Clean up unused images
+              docker image prune -f
             
             # Clean up unused images
             docker image prune -f
-            
-            # Check container status
-            docker-compose ps
-            
-            # Print recent logs
-            docker-compose logs --tail=100
 
       - name: Get Current Time
         uses: 1466587594/get-current-time@v2
