feat : githubAction 일부 수정(10) docker-compose.yml 도 일괄 관리, 로드밸런싱 관련 로직 추가, network 이름을 ubuntu_this_network 로 변경

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,6 +60,89 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/imagename:latest
 
+      - name: Create docker-compose.yml
+        run: |
+          cat << EOF > docker-compose.yml
+          version: '3'
+          services:
+            nginx:
+              image: nginx:alpine
+              container_name: nginx
+              ports:
+                - "80:80"
+              volumes:
+                - ./nginx.conf:/etc/nginx/nginx.conf:ro
+              depends_on:
+                - spring-boot-1
+                - spring-boot-2
+                - spring-boot-3
+              networks:
+                - ubuntu_this_network
+              restart: always
+            spring-boot-1:
+              container_name: spring-boot-1
+              image: ${DOCKER_USERNAME}/imagename:latest
+              expose:
+                - "8080"
+              depends_on:
+                - redis
+              environment:
+                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
+                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
+                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
+                SPRING_REDIS_HOST: redis
+                SPRING_REDIS_PORT: 6379
+              networks:
+                - ubuntu_this_network
+              restart: always
+            spring-boot-2:
+              container_name: spring-boot-2
+              image: ${DOCKER_USERNAME}/imagename:latest
+              expose:
+                - "8080"
+              depends_on:
+                - redis
+              environment:
+                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
+                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
+                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
+                SPRING_REDIS_HOST: redis
+                SPRING_REDIS_PORT: 6379
+              networks:
+                - ubuntu_this_network
+              restart: always
+            spring-boot-3:
+              container_name: spring-boot-3
+              image: ${DOCKER_USERNAME}/imagename:latest
+              expose:
+                - "8080"
+              depends_on:
+                - redis
+              environment:
+                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
+                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
+                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
+                SPRING_REDIS_HOST: redis
+                SPRING_REDIS_PORT: 6379
+              networks:
+                - ubuntu_this_network
+              restart: always
+            redis:
+              image: redis:alpine
+              container_name: redis_boot
+              volumes:
+                - redis:/data
+              networks:
+                - ubuntu_this_network
+              restart: always
+          networks:
+            ubuntu_this_network:
+              external: true
+          volumes:
+            redis:
+          EOF
+        shell: bash
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         env:
@@ -86,39 +169,44 @@ jobs:
             echo "REDIS_HOST=${REDIS_HOST}" >> .env
             echo "REDIS_PORT=${REDIS_PORT}" >> .env
             
+            # Copy docker-compose.yml to the server
+            cat << EOF > docker-compose.yml
+            $(cat docker-compose.yml)
+            EOF
+            
             # Create nginx.conf file
             cat << 'EOF' > nginx.conf
             events {
-            worker_connections 1024;
+              worker_connections 1024;
             }
             
-              http {
+            http {
               upstream spring-app {
-              server spring-boot:8080;
-            }
+                least_conn;
+                server spring-boot-1:8080;
+                server spring-boot-2:8080;
+                server spring-boot-3:8080;
+              }
             
               server {
-              listen 80;
-              server_name localhost;
+                listen 80;
+                server_name localhost;
             
-              location / {
-              proxy_pass http://spring-app;
-              proxy_set_header Host \$host;
-              proxy_set_header X-Real-IP \$remote_addr;
-              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                location / {
+                  proxy_pass http://spring-app;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                }
+              }
             }
-            }
-            }
-              EOF
+            EOF
             
-              # Pull the latest images
-              docker-compose pull
+            # Pull the latest images
+            docker-compose pull
             
-              # Build and start the containers
-              docker-compose up -d --build
-            
-              # Clean up unused images
-              docker image prune -f
+            # Build and start the containers
+            docker-compose up -d --build
             
             # Clean up unused images
             docker image prune -f
