--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,89 +60,6 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/imagename:latest
 
-      - name: Create docker-compose.yml
-        run: |
-          cat << EOF > docker-compose.yml
-          version: '3'
-          services:
-            nginx:
-              image: nginx:alpine
-              container_name: nginx
-              ports:
-                - "80:80"
-              volumes:
-                - ./nginx.conf:/etc/nginx/nginx.conf:ro
-              depends_on:
-                - spring-boot-1
-                - spring-boot-2
-                - spring-boot-3
-              networks:
-                - ubuntu_this_network
-              restart: always
-            spring-boot-1:
-              container_name: spring-boot-1
-              image: ${DOCKER_USERNAME}/spring:latest
-              expose:
-                - "8080"
-              depends_on:
-                - redis
-              environment:
-                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
-                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
-                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
-                SPRING_REDIS_HOST: redis
-                SPRING_REDIS_PORT: 6379
-              networks:
-                - ubuntu_this_network
-              restart: always
-            spring-boot-2:
-              container_name: spring-boot-2
-              image: ${DOCKER_USERNAME}/spring:latest
-              expose:
-                - "8080"
-              depends_on:
-                - redis
-              environment:
-                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
-                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
-                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
-                SPRING_REDIS_HOST: redis
-                SPRING_REDIS_PORT: 6379
-              networks:
-                - ubuntu_this_network
-              restart: always
-            spring-boot-3:
-              container_name: spring-boot-3
-              image: ${DOCKER_USERNAME}/spring:latest
-              expose:
-                - "8080"
-              depends_on:
-                - redis
-              environment:
-                SPRING_DATASOURCE_URL: jdbc:mysql://\${RDS_ENDPOINT}/\${DB_NAME}?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&autoReconnect=true
-                SPRING_DATASOURCE_USERNAME: \${DB_USERNAME}
-                SPRING_DATASOURCE_PASSWORD: \${DB_PASSWORD}
-                SPRING_REDIS_HOST: redis
-                SPRING_REDIS_PORT: 6379
-              networks:
-                - ubuntu_this_network
-              restart: always
-            redis:
-              image: redis:alpine
-              container_name: redis_boot
-              volumes:
-                - redis:/data
-              networks:
-                - ubuntu_this_network
-              restart: always
-          networks:
-            ubuntu_this_network:
-              external: true
-          volumes:
-            redis:
-          EOF
-        shell: bash
-
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         env:
@@ -171,14 +88,14 @@ jobs:
             echo "REDIS_PORT=${REDIS_PORT}" >> .env
             echo "PUBLIC_IP_V4=${PUBLIC_IP_V4}" >> .env
             
+            # Modify docker-compose.yml
+            sed -i 's/${DOCKER_USERNAME}/'$DOCKER_USERNAME'/g' docker-compose.yml
+            sed -i 's/${RDS_ENDPOINT}/'$RDS_ENDPOINT'/g' docker-compose.yml
+            sed -i 's/${DB_NAME}/'$DB_NAME'/g' docker-compose.yml
+            sed -i 's/${DB_USERNAME}/'$DB_USERNAME'/g' docker-compose.yml
+            sed -i 's/${DB_PASSWORD}/'$DB_PASSWORD'/g' docker-compose.yml
             
-            
-            # Copy docker-compose.yml to the server
-            cat << EOF > docker-compose.yml
-            $(cat docker-compose.yml)
-            EOF
-            
-            # Create nginx.conf file
+            # Create and modify nginx.conf file
             cat << 'EOF' > nginx.conf
             events {
               worker_connections 1024;
@@ -205,6 +122,7 @@ jobs:
               }
             }
             EOF
+            sed -i "s/PUBLIC_IP_V4/${PUBLIC_IP_V4}/g" nginx.conf
             
             # Pull the latest images
             docker-compose pull
