--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/imagename:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/spring:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
