--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,6 +78,20 @@ jobs:
           port: 22
           envs: DOCKER_USERNAME,RDS_ENDPOINT,DB_NAME,DB_USERNAME,DB_PASSWORD,REDIS_HOST,REDIS_PORT,PUBLIC_IP_V4
           script: |
+            # Create backup directory
+            mkdir -p ~/backups
+            
+            # Backup existing files if they exist
+            if [ -f docker-compose.yml ]; then
+              cp docker-compose.yml ~/backups/docker-compose.yml.$(date +%Y%m%d_%H%M%S)
+              echo "Created backup of existing docker-compose.yml"
+            fi
+            
+            if [ -f nginx.conf ]; then
+              cp nginx.conf ~/backups/nginx.conf.$(date +%Y%m%d_%H%M%S)
+              echo "Created backup of existing nginx.conf"
+            fi
+            
             # Update .env file with latest values
             echo "DOCKER_USERNAME=${DOCKER_USERNAME}" > .env
             echo "RDS_ENDPOINT=${RDS_ENDPOINT}" >> .env
@@ -88,12 +102,91 @@ jobs:
             echo "REDIS_PORT=${REDIS_PORT}" >> .env
             echo "PUBLIC_IP_V4=${PUBLIC_IP_V4}" >> .env
             
-            # Modify docker-compose.yml
-            sed -i 's/${DOCKER_USERNAME}/'$DOCKER_USERNAME'/g' docker-compose.yml
-            sed -i 's/${RDS_ENDPOINT}/'$RDS_ENDPOINT'/g' docker-compose.yml
-            sed -i 's/${DB_NAME}/'$DB_NAME'/g' docker-compose.yml
-            sed -i 's/${DB_USERNAME}/'$DB_USERNAME'/g' docker-compose.yml
-            sed -i 's/${DB_PASSWORD}/'$DB_PASSWORD'/g' docker-compose.yml
+            # Create docker-compose.yml
+            cat << 'EOF' > docker-compose.yml
+            version: '3'
+            services:
+              nginx:
+                image: nginx:alpine
+                container_name: nginx
+                ports:
+                  - "80:80"
+                volumes:
+                  - ./nginx.conf:/etc/nginx/nginx.conf:ro
+                depends_on:
+                  - spring-boot-1
+                  - spring-boot-2
+                  - spring-boot-3
+                networks:
+                  - ubuntu_this_network
+                restart: always
+            
+              spring-boot-1:
+                container_name: spring-boot-1
+                image: ${DOCKER_USERNAME}/spring:latest
+                expose:
+                  - "8080"
+                depends_on:
+                  - redis
+                environment:
+                  SPRING_DATASOURCE_URL: ${RDS_ENDPOINT}/${DB_NAME}
+                  SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+                  SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+                  SPRING_REDIS_HOST: redis
+                  SPRING_REDIS_PORT: 6379
+                networks:
+                  - ubuntu_this_network
+                restart: always
+            
+              spring-boot-2:
+                container_name: spring-boot-2
+                image: ${DOCKER_USERNAME}/spring:latest
+                expose:
+                  - "8080"
+                depends_on:
+                  - redis
+                environment:
+                  SPRING_DATASOURCE_URL: ${RDS_ENDPOINT}/${DB_NAME}
+                  SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+                  SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+                  SPRING_REDIS_HOST: redis
+                  SPRING_REDIS_PORT: 6379
+                networks:
+                  - ubuntu_this_network
+                restart: always
+            
+              spring-boot-3:
+                container_name: spring-boot-3
+                image: ${DOCKER_USERNAME}/spring:latest
+                expose:
+                  - "8080"
+                depends_on:
+                  - redis
+                environment:
+                  SPRING_DATASOURCE_URL: ${RDS_ENDPOINT}/${DB_NAME}
+                  SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+                  SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+                  SPRING_REDIS_HOST: redis
+                  SPRING_REDIS_PORT: 6379
+                networks:
+                  - ubuntu_this_network
+                restart: always
+            
+              redis:
+                image: redis:alpine
+                container_name: redis_boot
+                volumes:
+                  - redis:/data
+                networks:
+                  - ubuntu_this_network
+                restart: always
+            
+            networks:
+              ubuntu_this_network:
+                external: true
+            volumes:
+              redis:
+            EOF
             
             # Create and modify nginx.conf file
             cat << 'EOF' > nginx.conf
@@ -122,6 +215,7 @@ jobs:
               }
             }
             EOF
+            
             sed -i "s/PUBLIC_IP_V4/${PUBLIC_IP_V4}/g" nginx.conf
             
             # Pull the latest images
