feat : githubAction 일부 수정(32)
base64 인코딩 없이 yml 파일 첨부

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -218,3 +218,12 @@ jobs:
       - name: Print Current Time
         run: echo "Current Time=${{steps.current-time.outputs.formattedTime}}"
         shell: bash
+
+      - name: Check JAR contents
+        run: |
+          jar tf build/libs/*.jar | grep application.yml
+          
+      - name: Check application.yml content
+        run: |
+          cat ./src/main/resources/application.yml
+          echo "File exists: $(test -f ./src/main/resources/application.yml && echo yes || echo no)"
